--- a/Test2_R.Rmd
+++ b/Test2_R.Rmd
@@ -484,5 +484,7 @@ print(resample_dtotal_hist)
 9. Provide	a	brief	explanation	of	what	you	observe	in	the	measures	and	
 histograms	as	it	relates	to	sample size	and	resampling. 
 
-As our sample size gets larger and larger, we tend to see the sample means getting closer to the mean of the original distribution. With resampling, all resample means approach the distribution's mean. 
+As our sample size gets larger, a few things happen: The minimum goes down and the maximum goes up. This is because any individual point at the extreme of the population is more likely to be chosen as we obtain a larger sample. Similarly, the sample mean moves closer to the population mean (for low sample sizes, having a few extreme values picked can drastically move the sample mean; this is not the case for high sample sizes), and the sample variance decreases (the formula for sample variance actually has the sample size in its denominator, so a higher sample size is automatically going to have a lowering effect on the variance). The increasing accuracy of the mean as the sample size increases is somewhat difficult to see in the diamonds histogram, which is relatively large (meaning even a small percent sample is going to be large, and therefore is likely to be accurate), but can be seen relatively will for the abalone data and extremely well for the faithful data. 
+
+With regards to resampling, as the size of the sample goes up, the minimum grows higher, the maximum gets lower, the variance gets lower, and the mean stays roughly the same. 1000 samples of 1% of the population are going to vary widely in sample mean, while 1000 samples of 80% will not. This is because, as mentioned before, a larger sample size means a more accurate sample mean. This increased accuracy is why the variance and maximum are lower, and the minimum is higher. The resample mean tends to represent the population mean. This is a result of the central limit theorem. The central limit theorem also states that the means of multiple samples will come to resemble a normal distribution after enough samples are taken. This can be seen in the resample histograms, which always resemble a normal distribution, despite the fact that the original distributions are often not normal in some way.  
 
